macros/tests/ui/declare/on_event_observe_not_self_declare_fail.stderr
error: `outside` is not declare in same `widget!` with `on` item, `on` item only allow to observe widget declared in the `widget!` macro which itself located in.
  --> tests/ui/declare/on_event_observe_not_self_declare_fail.rs:10:14
   |
10 |           on outside { tap: |_| { }}
   |              ^^^^^^^
